--- a/gb/22/1/15/n13506589.md
+++ b/gb/22/1/15/n13506589.md
@@ -1,62 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sdtcjh326/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sdtcjh326/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sdtcjh326/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sdtcjh326/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sdtcjh326/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sdtcjh326/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>福尔摩沙国际电影节 台中旧城28国创作登场</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13506591-537342-600x400.jpg" />
 <h6>导演洪马克创办的“福尔摩沙国际电影节”，15日、16日于台中驿站(旧台中火车站)为主场地进行颁奖仪式与专题座谈。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2022年01月15日讯】（大纪元记者黄玉燕台湾<ahref="https://github.com/sdtcjh326/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>报导）睽违3年，由导演洪马克创办的“<ahref="https://github.com/sdtcjh326/djy/blob/master/gb/tag/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%B2%99%E5%9B%BD%E9%99%85%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">福尔摩沙国际电影节</a>”，1月14日在<ahref="https://github.com/sdtcjh326/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>树合宛正式开幕；除放映首场主题“友善环境影展”，接着1月15日、16日将以台中驿站(旧台中火车站)作为主场地，进行颁奖仪式与专题座谈；另规划太阳饼博物馆，成旅晶赞和南园酒家等三个场地同步举行放映会与映后座谈。此次影展专题座谈涵盖提案，创投与媒合平台等不同层面的多个主题，16日当天下午还有国际提案工作坊供报名参与，另映后座谈则开放所有参展导演与民众自由参加。</p>
+<p>【大纪元2022年01月15日讯】（大纪元记者黄玉燕台湾<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>报导）睽违3年，由导演洪马克创办的“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%B2%99%E5%9B%BD%E9%99%85%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">福尔摩沙国际电影节</a>”，1月14日在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>树合宛正式开幕；除放映首场主题“友善环境影展”，接着1月15日、16日将以台中驿站(旧台中火车站)作为主场地，进行颁奖仪式与专题座谈；另规划太阳饼博物馆，成旅晶赞和南园酒家等三个场地同步举行放映会与映后座谈。此次影展专题座谈涵盖提案，创投与媒合平台等不同层面的多个主题，16日当天下午还有国际提案工作坊供报名参与，另映后座谈则开放所有参展导演与民众自由参加。</p>
 <p>FFIFA福尔摩沙于2016年创办，中间停办三年，今年迈入第四届。导演洪马克表示，这次影展和以往有所不同，以倡导“自然农法”为理念，从募资到场地建设，都着重与台中中区的连接与反馈。</p>
-<p>此次的参展共来自<ahref="https://github.com/sdtcjh326/djy/blob/master/gb/tag/28%E5%9B%BD.md#1">28国</a>、近500部作品参与，经过来自世界各地评审的评选后，最终挑选80部得奖作品；其中40部得奖作品将会在这次的影展中进行放映，除了台湾本土，也有来自韩国，日本，菲律宾等国外的得奖作品。三个场地的放映会都实行自由入场，方便有兴趣的民众随时前往进行观摩。</p>
-<p>本次影展也获得许多台中当地品牌与产业的赞助，成旅晶赞与绿宿等旅宿更提供限时的住宿优惠，想前来台中观摩影展的民众不要错过。更多资讯可查询<ahref="https://github.com/sdtcjh326/djy/blob/master/gb/tag/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%B2%99%E5%9B%BD%E9%99%85%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">福尔摩沙国际电影节</a>的脸书专页：FFIFA?&#8211;?福尔摩沙国际电影节?Formosa?Festival?of?International?Filmmaker?Awards</p>
+<p>此次的参展共来自<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/28%E5%9B%BD.md#1">28国</a>、近500部作品参与，经过来自世界各地评审的评选后，最终挑选80部得奖作品；其中40部得奖作品将会在这次的影展中进行放映，除了台湾本土，也有来自韩国，日本，菲律宾等国外的得奖作品。三个场地的放映会都实行自由入场，方便有兴趣的民众随时前往进行观摩。</p>
+<p>本次影展也获得许多台中当地品牌与产业的赞助，成旅晶赞与绿宿等旅宿更提供限时的住宿优惠，想前来台中观摩影展的民众不要错过。更多资讯可查询<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A6%8F%E5%B0%94%E6%91%A9%E6%B2%99%E5%9B%BD%E9%99%85%E7%94%B5%E5%BD%B1%E8%8A%82.md#1">福尔摩沙国际电影节</a>的脸书专页：FFIFA?&#8211;?福尔摩沙国际电影节?Formosa?Festival?of?International?Filmmaker?Awards</p>
 <p>责任编辑：李薇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/17/11/10/n9825815.md#1">福尔摩沙电影周日开演 亚太影展明年登场</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/18/6/8/n10467078.md#1">素人当导演   中市开课鼓励创作</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/20/10/30/n12514007.md#1">华府台美文化讲座31日开跑 全球民众可线上听讲互动</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/21/7/26/n13115898.md#1">2021屏东电影节征件  魏德圣担任活动大使</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/21/11/3/n13349650.md#1">“福尔摩沙国际电影节”回归  影展聚焦环境共荣</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/22/1/15/n13505896.md#1">虎年到！ 台中草悟道提早办年货</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/22/1/14/n13504770.md#1">大雅市场异地改造 立委争取善款补助</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/22/1/14/n13504336.md#1">桃市小学提早放寒假 中市：各校暂停跨县交流</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/22/1/14/n13504206.md#1">颜家招待所违建只拆一半 绿批“歹戏拖棚”</a></li>
-<li><a href="https://github.com/sdtcjh326/djy/blob/master/gb/22/1/14/n13504239.md#1">中市驳北屯建桥图利建商 议员吁重视民众权益</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/10/n9825815.md#1">福尔摩沙电影周日开演 亚太影展明年登场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/8/n10467078.md#1">素人当导演   中市开课鼓励创作</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/10/30/n12514007.md#1">华府台美文化讲座31日开跑 全球民众可线上听讲互动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/26/n13115898.md#1">2021屏东电影节征件  魏德圣担任活动大使</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/11/3/n13349650.md#1">“福尔摩沙国际电影节”回归  影展聚焦环境共荣</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690735.md#1">中荣乳癌阳光斗士  献爱植物人失依老人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690659.md#1">FFIFA首届纪录片工作坊 提升贴近市场创作力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690119.md#1">中医大展家扶绘画 儿童节“艺”义非凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688764.md#1">许博允创作60周年  吴兴国“寒食”舞出人性</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688674.md#1">台中婚宴群聚21人确诊  餐厅未实联制罚1.5万</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/24/n11543039.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/13/n10781989.md#1" target="_blank">林辉：北京反驳彭斯 需要补历史课的是谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/3/n13479197.md#1">麦克阿瑟的韩战及台湾预言</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/7/n13489253.md#1">【百年真相】送钱送女儿 谷俊山升官“秘诀”</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/7/n13488752.md#1">腊八吃腊八粥好养生 怎样做营养腊八粥？</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/6/n13486963.md#1">【未解之谜】300万年前火星上的核战</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/21/11/28/n13403471.md#1">【人生之钥】弱女子占一卦 忍辱改变了下半生</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/13/n13503219.md#1">【横河观点】孙力军遭三项指控 真实罪行是什么</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/14/n13505596.md#1">【秦鹏直播】中美大转折内幕 居然因为李克强？</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/14/n13505579.md#1">【远见快评】天津疫情数据疑云 中共防疫泄密</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/12/n13500688.md#1">曾拒绝成龙天价片酬 元华曝光原因 网民盛赞</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/12/n13500588.md#1">王友群：习近平二十大前“防政变”四大举措</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/13/n13502906.md#1">曾和习近平合影 李贞驹为何被英情报处曝光</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/12/n13500688.md#1">曾拒绝成龙天价片酬 元华曝光原因 网民盛赞</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/12/n13500396.md#1">章子怡汪峰才退出股东 原共同投资公司就被罚</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/13/n13500881.md#1">自曝外表常被评论 58岁叶童吐心声</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/13/n13502927.md#1">时隔30年重返教职 李冰冰以超强耐心待学生</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/13/n13503273.md#1">票房能助复出？ 范冰冰新片《355》北美上映</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/12/n13500035.md#1">研究：缺乏维生素B12等营养增加抑郁症风险</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/6/n13486023.md#1">是不是领导型人才 看“脸”就知一二</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/10/n13495610.md#1">体温升1度 可以长寿、美容！名医4方法暖身</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/11/n13497825.md#1">蓬佩奥半年瘦40公斤 这2招简单却不易复胖</a></li>
-<li><a href="https://github.com/julcls378/djy/blob/master/gb/22/1/12/n13499276.md#1">断食2大好处：降低炎症、消除最危险脂肪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sdtcjh326/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sdtcjh326/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/15/n13506589.htm">福尔摩沙国际电影节 台中旧城28国创作登场</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/15/n13506589.htm">福尔摩沙国际电影节 台中旧城28国创作登场</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sdtcjh326/djy/blob/master/gb/22/1/15/n13506589.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sdtcjh326/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sdtcjh326/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sdtcjh326/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sdtcjh326/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sdtcjh326/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/1/15/n13506589.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
